--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "vite",
+		"test": "vitest",
 		"build": "tsc && vite build",
 		"preview": "vite build && vite preview"
 	},
@@ -36,14 +37,18 @@
 	"homepage": "https://github.com/yakir-reznik/tailwind-merge-vue-directive#readme",
 	"dependencies": {
 		"@babel/types": "^7.23.6",
-		"tailwind-merge": "^2.0.0",
-		"vue": "^3.0.0"
+		"tailwind-merge": "^2.0.0"
 	},
 	"devDependencies": {
 		"@rollup/plugin-typescript": "^8.5.0",
 		"@types/node": "^20.10.6",
+		"@vitejs/plugin-vue": "^5.0.2",
+		"@vue/test-utils": "^2.4.3",
+		"jsdom": "^23.1.0",
 		"tslib": "^2.4.0",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.11"
+		"vite": "^5.0.11",
+		"vitest": "^1.1.3",
+		"vue": "^3.4.5"
 	}
 }
